--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_subscriptionBanner.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_subscriptionBanner.scss
@@ -29,5 +29,11 @@ html[dir="rtl"] {
                 display: block;
             }
         }
+
+        @media #{$desktop} {
+            &__container--right {
+                float: right;
+            }
+        }
     }
 }
